adding absolute img url +initial style

--- a/src/about.html
+++ b/src/about.html
@@ -8,10 +8,10 @@
   </head>
   <body data-barba="wrapper">
     <main data-barba="container" data-barba-namespace="home">
-<a href="index.html">home</a>
-<a href="about.html">about</a>
-<p>this is about page</p>
+      <a href="index.html">home</a>
+      <a href="about.html">about</a>
+      <p>this is about page</p>
+      <img src="https://cdn.igp.com/f_auto,q_auto,t_prodm/products/p-premium-mango-cake-half-kg--135608-m.jpg" alt="">
     </main>
-
   </body>
 </html>
